# ahc-environment

./: .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
ahc_backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ahc_backend/ahc/: asgi.py  celery.py  error_handlers.py  manage.py  settings.py  urls.py  wsgi.py
ahc_backend/ahc/ahc/: asgi.py  settings.py  urls.py  wsgi.py
ahc_backend/ahc/ahc_users/: apps.py  models.py  serializers.py
ahc_backend/ahc/settings/: base.py  dev.py  (+2 more)
ahc_backend/ahc_experiments/: admin.py  apps.py  custom_storage.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
ahc_backend/ahc_github/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ahc_backend/ahc_repositories/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
ahc_backend/ahc_runners/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
ahc_backend/ahc_simulations/: admin.py  apps.py  models.py  tasks.py
ahc_backend/ahc_users/: admin.py  apps.py  custom_storage.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
ahc_backend/ahc_utils/: apps.py  helpers.py  view_permissions.py
ahc_backend/docs/: api-doc.yaml
ahc_backend/templates/: group_actions.html  password_reset.html  welcome.html
ahc_runner/: .dockerignore  .gitignore  Dockerfile  README.md  api.go  clone.py  docker.go  entrpoint.sh  entrypoint.sh  go.mod  go.sum  helpers.go  main.go  pyproject.toml
ahc_runner/broadcastserver/: socket.go
(+118 files in other folders)
