[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.poetry]
name = "ahc_runner"
version = "0.1.0"
description = ""
authors = ["AHC Project Owners"]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.24"


[tool.poetry.dev-dependencies]
black = "^21.10b0"
pylint = "^2.11.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
